test-cases/alias_recursion2.exp
Error detected during type checking of module(s) alias_recursion2, alias_recursion2.mynode
[91mtest-cases/alias_recursion2.wybe:19:13: Calling test proc alias_recursion2.mynode.next<1> in a det context
[0m[91mtest-cases/alias_recursion2.wybe:18:13: Calling test proc alias_recursion2.mynode.next<1> in a det context
[0m
